--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -994,7 +994,9 @@ tech_mega_assembly_Mk2:0 "Giga-Assembly Systems"
 tech_mega_assembly_Mk2_desc:0 "Giga-Advanced templates allow us to drastically increase the assembly of new units."
 edict_greater_than_ourselves_light:0 "Free resettlement"
 edict_greater_than_ourselves_light_desc:1 "Encourages free unemployed pops to voluntarily resettle themselves to suitable planets with jobs and housing within our empire."
-tr_domination_colonial_viceroys_desc:0 "§YRulers§! and §YGovernors§! start at level §Y3§!."
+tr_domination_colonial_viceroys_desc:0 "§YRulers§! and §YGovernors§! start at level §Y3§!.\n\nJob Ruler add 1 £unity£"
+tr_domination_colonial_viceroys_machine_desc:0 "Job $coordinator$ and $evaluator$ add 1 £unity£"
+tr_domination_colonial_viceroys_hives_desc:0 "Job $synapse_drone$ add 1 £unity£"
 
 small10players:0 "Big Small"
 mediumover16:0 "Big Medium"
@@ -1246,7 +1248,7 @@ mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $
 trade_policy_military:1 "Trade Weapon"
 trade_policy_military_name:0 "$trade_policy_military$"
 trade_conversion_policy_military_name:0 "$trade_policy_military$"
-trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
+trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £alloys£ §Y0.16§!"
 job_society_researcher: "society researcher"
 job_society_researcher_desc: "Study genetic and culture of new, old and alien pops"
 mod_job_society_researcher_add:0 "$job_society_researcher$ Jobs"
@@ -1254,3 +1256,69 @@ mod_job_society_researcher_per_pop:0 "§G+1§! $job_society_researcher$ Job per 
 mod_job_society_researcher_per_pop_short:0 "\n§G+1§! £mod_job_society_researcher_add£ per $VALUE$ £pop£"
 job_society_researcher_plural:0 "society Researchers"
 job_society_researcher_effect_desc:0 "£job_society_researcher£ $job_society_researcher_plural$ turn §Y$resource of study$§! into £society£ §YResearch Points§! for new technologies"
+
+#####################################
+ # TRADE ACTIONS
+ #####################################
+ trade_action_trade_relic_desc: "We have no need for this relic, maybe others will find value in it?"
+ trade_action_r_dragon_trophy: "Relic: $r_dragon_trophy$"
+ trade_action_r_dragon_trophy_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_khans_throne: "Relic: $r_khans_throne$"
+ trade_action_r_khans_throne_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_worm_scales: "Relic: $r_worm_scales$"
+ trade_action_r_worm_scales_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_rubricator: "Relic: $r_rubricator$"
+ trade_action_r_rubricator_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_galaxy: "Relic: $r_galaxy$"
+ trade_action_r_galaxy_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_omnicodex: "Relic: $r_omnicodex$"
+ trade_action_r_omnicodex_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_surveyor: "Relic: $r_surveyor$"
+ trade_action_r_surveyor_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_galatron: "Relic: $r_galatron$"
+ trade_action_r_galatron_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_ancient_sword: "Relic: $r_ancient_sword$"
+ trade_action_r_ancient_sword_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_severed_head: "Relic: $r_severed_head$"
+ trade_action_r_severed_head_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_prethoryn_queen: "Relic: $r_prethoryn_queen$"
+ trade_action_r_prethoryn_queen_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_unbidden_warlock: "Relic: $r_unbidden_warlock$"
+ trade_action_r_unbidden_warlock_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_contingency_core: "Relic: $r_contingency_core$"
+ trade_action_r_contingency_core_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_zro_crystal: "Relic: $r_zro_crystal$"
+ trade_action_r_zro_crystal_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_the_last_baol: "Relic: $r_the_last_baol$"
+ trade_action_r_the_last_baol_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_the_defragmentor: "Relic: $r_the_defragmentor$"
+ trade_action_r_the_defragmentor_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_reality_perforator: "Relic: $r_reality_perforator$"
+ trade_action_r_reality_perforator_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_pox_sample: "Relic: $r_pox_sample$"
+ trade_action_r_pox_sample_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_cryo_core: "Relic: $r_cryo_core$"
+ trade_action_r_cryo_core_desc: "$trade_action_trade_relic_desc$"
+ trade_action_r_war_forge: "Relic: $r_war_forge$"
+ trade_action_r_war_forge_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_the_radiance: "Relic: $r_the_radiance$"
+trade_action_r_the_radiance_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_toxic_god: "Relic: $r_toxic_god$"
+trade_action_r_toxic_god_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_odryskan_crystal: "Relic: $r_odryskan_crystal$"
+trade_action_r_odryskan_crystal_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_wormhole_key_fragment_1: "Relic: $r_wormhole_key_fragment_1$"
+trade_action_r_wormhole_key_fragment_1_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_wormhole_key_fragment_2: "Relic: $r_wormhole_key_fragment_2$"
+trade_action_r_wormhole_key_fragment_2_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_wormhole_key_fragment_3: "Relic: $r_wormhole_key_fragment_3$"
+trade_action_r_wormhole_key_fragment_3_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_wormhole_key_fragment_4: "Relic: $r_wormhole_key_fragment_4$"
+trade_action_r_wormhole_key_fragment_4_desc: "$trade_action_trade_relic_desc$"
+trade_action_r_wormhole_key: "Relic: $r_wormhole_key$"
+trade_action_r_wormhole_key_desc: "$trade_action_trade_relic_desc$"
+
+tooltip_economic_policy_politics_effects: "Gain 10 £unity£/month and 10 ££society££/month for each migration pact."
+migration: "Migrations"
+economic_policy_domination_name: "$economic_policy_domination$"
+economic_policy_politics_name: "$economic_policy_politics$"
