--- a/localisation/japanese/phi_l_japanese.yml
+++ b/localisation/japanese/phi_l_japanese.yml
@@ -1048,6 +1048,8 @@ mod_habitat_pop_job_trade_mult: "Commercio $mod_habitat_jobs_produces_mult$"
 d_small_research: "小規模な研究"
 d_medium_research: "中規模な研究"
 tr_domination_colonial_viceroys_desc:0 "§Y統治者§!と§Y総督§!は§Y3§!レベルからスタートします。"
+tr_domination_colonial_viceroys_machine_desc:0 "Job $coordinator$ and $evaluator$ add 1 £unity£"
+tr_domination_colonial_viceroys_hives_desc:0 "Job $synapse_drone$ add 1 £unity£"
 
 building_machine_assembly_complex_3:0 "ギガマシンアセンブリコンプレックス"
 building_machine_assembly_complex_3_desc:0 "新しいユニットが構築されるギガの高度なアセンブリプラント。"
@@ -1303,7 +1305,7 @@ mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $
 trade_policy_military:1 "Trade Weapon"
 trade_policy_military_name:0 "$trade_policy_military$"
 trade_conversion_policy_military_name:0 "$trade_policy_military$"
-trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
+trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £alloys£ §Y0.16§!"
 job_society_researcher: "society researcher"
 job_society_researcher_desc: "Study genetic and culture of new, old and alien pops"
 mod_job_society_researcher_add:0 "$job_society_researcher$ Jobs"
