--- a/localisation/korean/phi_l_korean.yml
+++ b/localisation/korean/phi_l_korean.yml
@@ -1056,6 +1056,8 @@ tech_mega_assembly_Mk2_desc:0 "고급 기가 템플릿을 사용하여 새로운
 edict_greater_than_ourselves_light:0 "자유 이주"
 edict_greater_than_ourselves_light_desc:1 "실직한 인구가 제국 내에서 직업과 주거지가 있는 적합한 행성으로 자발적으로 이주하도록 장려합니다."
 tr_domination_colonial_viceroys_desc:0 "§Y지도자§!와 §Y독재자§!는 §Y3§! 레벨에서 시작합니다."
+tr_domination_colonial_viceroys_machine_desc:0 "Job $coordinator$ and $evaluator$ add 1 £unity£"
+tr_domination_colonial_viceroys_hives_desc:0 "Job $synapse_drone$ add 1 £unity£"
 small10players:0 "작은 큰"
 mediumover16:0 "큰 중간"
 
@@ -1306,7 +1308,7 @@ mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $
 trade_policy_military:1 "Trade Weapon"
 trade_policy_military_name:0 "$trade_policy_military$"
 trade_conversion_policy_military_name:0 "$trade_policy_military$"
-trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
+trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £alloys£ §Y0.16§!"
 job_society_researcher: "society researcher"
 job_society_researcher_desc: "Study genetic and culture of new, old and alien pops"
 mod_job_society_researcher_add:0 "$job_society_researcher$ Jobs"
