--- a/localisation/spanish/phi_l_spanish.yml
+++ b/localisation/spanish/phi_l_spanish.yml
@@ -1046,7 +1046,7 @@ civic_machine_despoilers_desc:0 "$civic_barbaric_despoilers_desc$"
 edict_archeologist_spedition: "Expedición arqueológica"
 edict_archeologist_spedition_desc: "Al iniciar una expedición arqueológica, podríamos encontrar artefactos dentro de nuestro imperio."
 phi_pm_atmospheric_pollution: "Contaminación atmosférica"
-mod_habitat_pop_job_trade_mult: "$mod_habitat_jobs_produces_mult$的贸易"
+mod_habitat_pop_job_trade_mult: "Comércio $mod_habitat_jobs_produces_mult$"
 d_small_research: "investigación pequeña"
 d_medium_research: "investigación mediana"
 
@@ -1057,6 +1057,8 @@ tech_mega_assembly_Mk2_desc:0 "Las plantillas avanzadas de ensamblaje gigante no
 edict_greater_than_ourselves_light:0 "Reasentamiento libre"
 edict_greater_than_ourselves_light_desc:1 "Fomenta que las poblaciones desempleadas se reubiquen voluntariamente en planetas adecuados con empleo y vivienda dentro de nuestro imperio."
 tr_domination_colonial_viceroys_desc:0 "Los §YGobernantes§! y §YGobernadores§! comienzan en el nivel §Y3§!."
+tr_domination_colonial_viceroys_machine_desc:0 "Job $coordinator$ and $evaluator$ add 1 £unity£"
+tr_domination_colonial_viceroys_hives_desc:0 "Job $synapse_drone$ add 1 £unity£"
 small10players:0 "Pequeño Grande"
 mediumover16:0 "Mediano Grande"
 
@@ -1291,7 +1293,7 @@ mod_planet_researchers_phi_engineering_research_produces_add: "£engineering£ $
 trade_policy_military:1 "Trade Weapon"
 trade_policy_military_name:0 "$trade_policy_military$"
 trade_conversion_policy_military_name:0 "$trade_policy_military$"
-trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £energy£ §Y-0.1§!, £alloys£ §Y0.25§!"
+trade_policy_military_desc:1 "By banding together in a trade militar league, we are able trade with lord of war of other country for get alloys\n\n§EEach collected £trade_value£ §YTrade Value§! earns us £alloys£ §Y0.16§!"
 job_society_researcher: "society researcher"
 job_society_researcher_desc: "Study genetic and culture of new, old and alien pops"
 mod_job_society_researcher_add:0 "$job_society_researcher$ Jobs"
