Migliorata AI ffix alcuni bug

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -970,7 +970,7 @@ raided_HM: "$raided$"
 raided_GM: "$raided$"
 raidedAS: "$raided$"
 new_colony_of_franchising:1 "Newly franchising Colony"
-col_researchphy:0 "Eng-World"
+col_researchphy:0 "Phy-World"
  col_researchphy_desc:1 "This world is a seat of scientific research and technological advancement of physics."
  col_researcheng:0 "Eng-World"
  col_researcheng_desc:1 "This world is a seat of scientific research and technological advancement of enginnering."
@@ -1317,8 +1317,9 @@ trade_action_r_wormhole_key_fragment_4: "Relic: $r_wormhole_key_fragment_4$"
 trade_action_r_wormhole_key_fragment_4_desc: "$trade_action_trade_relic_desc$"
 trade_action_r_wormhole_key: "Relic: $r_wormhole_key$"
 trade_action_r_wormhole_key_desc: "$trade_action_trade_relic_desc$"
+tooltip_economic_policy_politics_effects: "Gain 10 £unity£/month and 10 £society£/month for each migration pact.\nEvery planet with §Yplanet devastation§! over 10 reduce §Yplanet devastation§! every month of 3"
 
-tooltip_economic_policy_politics_effects: "Gain 10 £unity£/month and 10 ££society££/month for each migration pact."
 migration: "Migrations"
 economic_policy_domination_name: "$economic_policy_domination$"
 economic_policy_politics_name: "$economic_policy_politics$"
+tooltip_drone_economic_policy_politics_effects: "Every planet with §Yplanet devastation§! over 10 reduce §Yplanet devastation§! every month of 3"
