Fix e miglioramenti AI. Miglioramenti vari.

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -3,6 +3,8 @@
 #TODO
 sublimation.110.desc: ""
 special: "Special"
+graygoo_country: "Gragoo country"
+phi_graygoo_country: "Graygoo country"
 ##################
 ### START MENU ###
 ##################
