--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -5,6 +5,7 @@ sublimation.110.desc: ""
 special: "Special"
 graygoo_country: "Gragoo country"
 phi_graygoo_country: "Graygoo country"
+Phi_auto_ai_malus: "Ai over power"
 ##################
 ### START MENU ###
 ##################
