Ai migliorata, ora è temibile e non fa errori e se li fa poi se li auto coregge.

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -5,7 +5,12 @@ sublimation.110.desc: ""
 special: "Special"
 graygoo_country: "Gragoo country"
 phi_graygoo_country: "Graygoo country"
-Phi_auto_ai_malus: "Ai over power"
+Phi_auto_ai_malus: "Phigo Ai over power anti cheat"
+phi_ai5: "Phigo balance cheat AI N. 5" 
+phi_ai0: "Phigo balance cheat AI N. 0"
+phi_ai1: "Phigo balance cheat AI N. 1"
+phi_rep_ai0: "Phigo balance cheat AI N. 0R"
+phi_ai42: "Phigo balance cheat AI N. 42"
 ##################
 ### START MENU ###
 ##################
